--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://trinket.io/embed/python/abe4c6140af4?outputOnly=true&runOption=run" width="100%" height="100vh" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python/abe4c6140af4?outputOnly=true&runOption=run" width="100%" height="400" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
